Fixed ugly badge wrapping

--- a/public/stylesheets/tasks_stylesheet.css
+++ b/public/stylesheets/tasks_stylesheet.css
@@ -24,7 +24,10 @@
 .task .panel-body{
     padding-right: 0px;
 }*/
-
+.special-badge{
+    padding: 0px;
+    background-color: inherit;
+}
 .input-group{
     margin-bottom: 10px;
 }
